# goldbach-comet

./: CMakeLists.txt  LICENSE  README.md
include/: goldbach.hpp
lib/goldbach/: goldbach.cpp
src/: main.cpp  recursive.cpp
